--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-runtime": "^6.26.0",
     "benz-amr-recorder": "^1.1.3",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.1",
     "vant": "^2.12.18",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
